# Light-Pong

./: README.md
Hackathon_Light_Pong_Client/: CMakeLists.txt  README.md  sdkconfig
Hackathon_Light_Pong_Client/components/button/: CMakeLists.txt  button.c
Hackathon_Light_Pong_Client/components/espnow-client/: CMakeLists.txt  espnow-client.c  espnow-discovery.c
Hackathon_Light_Pong_Client/components/icm-42688-p/: icm-42688-p.c
Hackathon_Light_Pong_Client/components/led_matrix/: led_matrix.c
Hackathon_Light_Pong_Client/components/spi/: CMakeLists.txt  spi.c
Hackathon_Light_Pong_Client/main/: CMakeLists.txt  client.c
Hackaton_Light_Pong_Server/: CMakeLists.txt  DMX_CONFIGURATION_NOTES.md  DMX_README.md  README.md  sdkconfig
Hackaton_Light_Pong_Server/components/dmx_driver/: CMakeLists.txt  dmx_driver.c
Hackaton_Light_Pong_Server/components/espnow_comm/: CMakeLists.txt  espnow_comm.c  espnow_handler.c
Hackaton_Light_Pong_Server/components/light_effects/: CMakeLists.txt  light_effects.c
Hackaton_Light_Pong_Server/components/mh_x25_driver/: CMakeLists.txt  mh_x25_driver.c
Hackaton_Light_Pong_Server/main/: CMakeLists.txt  light_pong_main.c
Hackaton_Light_Pong_Server/main/config/: game_config.h  hardware_config.h
Hackaton_Light_Pong_Server/main/game/: game_controller.c  game_controller.h  game_types.h
client/: CMakeLists.txt
client/components/button/: button.c
client/components/espnow-client/: espnow-discovery.c
client/components/icm-42688-p/: CMakeLists.txt  icm-42688-p.c
client/components/spi/: spi.c
client/main/: espnow_example_main.c
(+14 files in other folders)
